Added Bateson anstract.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -229,7 +229,9 @@
             </li>
 
             <li>
-                Gregory Bateson
+                <a href="bateson.html">
+                Beautiful Minds: Gregory Bateson on Humans, Animals and Ecological Systems
+                </a>
                 <br />
                 <a href="bios.html#lowney">
                     Charles Lowney</a>,
@@ -268,7 +270,7 @@
 
 
             <li>
-                Walker Percy: Lost in the Cosmos
+                Walker Percy
                 <br />
                 Leslie Marsh,
                 The University of British Columbia
