--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -208,6 +208,12 @@
             </li>
 
             <li>
+                Carl Schmitt
+                <br />
+                    Gulsen Seven and Aylin Ozman
+            </li>
+
+            <li>
                 <a href="anscombe.html">
                     Elizabeth Anscombe on Rationalism</a>
                 <br />
