Added Scruton abstract.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -311,7 +311,8 @@
             </li>
 
             <li>
-                Roger Scruton
+                <a href="scruton.html">
+                    Roger Scruton</a>
                 <br />
                     <a href="bios.html#horcher">
                         Ferenc Hörcher</a>,
