--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -284,7 +284,10 @@
             </li>
 
             <li>
-                Stuart Hampshire
+                <a href="hampshire.html">
+                Stuart Hampshire and the Ineluctable
+                Imperfectability of the World
+                </a>
                 <br>
                     <a href="bios.html#mcintyre">
                     Kenneth McIntyre,
