Added Chamberlain material.

--- a/AntiRats2/bios.html
+++ b/AntiRats2/bios.html
@@ -100,6 +100,23 @@
                 <br>
                 <img src="graphics/Callahan.jpg" width="14%" class="center-img">
             </li>
+            <hr width="44%">
+
+            <li>
+                <a name="chamberlain">
+                <span class="contrib">Tyler Chamberlain</span>
+                Tyler Chamberlain lectures in political science at numerous
+                universities including Simon Fraser University and the
+                University of the Fraser Valley, teaching courses in political
+                theory, international relations and Canadian politics. His
+                  primary research interests are early modern political
+                  theory and Canadian political thought. He earned his Ph.D
+                  in Political Science from Carleton University in 2018.
+                </a>
+                <br>
+                <img src="graphics/Chamberlain.jpg"
+                width="14%" class="center-img">
+            </li>
 
             <hr width="50%">
 
