--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -123,6 +123,14 @@
             </li>
 
             <li>
+                <a href="pascal.html">
+                    Pascal on Faith, Reason, and Politics</a>
+                <br />
+                    <a href="bios.html#chamberlain">
+                    Tyler Chamberlain</a>
+            </li>
+
+            <li>
                 Jonathan Swift
                 <br />
                 Dónal Gill,
