Added Critics II to index.

--- a/AntiRats2/bios.html
+++ b/AntiRats2/bios.html
@@ -189,6 +189,25 @@
             <hr width="50%">
 
             <li>
+                <a name="garrison">
+                <span class="contrib">Dónal Gill</span>
+                </a>
+                has a PhD in Political Science from Concordia University,
+                writing a dissertation on the politics of travel in Jonathan
+                Swift’s <i>Gulliver’s Travels</i>.  Originally from Cork City in
+                Ireland, Dónal completed his BA (joint, hons.) in History and
+                Politics and MA in Politics at University College Cork. For the
+                latter he was awarded the Diarmuid Whelan memorial prize for
+                best dissertation and best overall Mark in the MA in Politics
+                program. Dónal teaches Political Science at Dawson College and
+                Humanities at Vanier College, both in Montreal, Canada.
+                <br>
+                <img src="graphics/Gill.jpg" width="14%" class="center-img">
+            </li>
+
+            <hr width="50%">
+
+            <li>
                 <a name="horcher">
                 <span class="contrib">Ferenc Hörcher</span>
                 is a political philosopher and historian of political thought.
