--- a/AntiRats2/carroll.html
+++ b/AntiRats2/carroll.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-        Pascal on Faith, Reason, and Politics
+            Lewis Carroll: What the Tortoise Said to Achilles
         </title>
     </head>
 
@@ -68,54 +68,60 @@
         </div>
 
         <h1>
-        Pascal on Faith, Reason, and Politics
+            Lewis Carroll: What the Tortoise Said to Achilles
         </h1>
 
-        <p>
-        Tyler Chamberlain
-        </p>
+            <p class="author_info">
+            Gene Callahan
+            </p>
+            
+            <h2>
+            Abstract
+            </h2>
+            
+            <p>
+                Lewis Carroll is most famous, of course, for his Alice books:
+                <i>Alice in Wonderland</i> and <i>Alice Through the Looking
+                Glass</i>. Those works certainly display an anti-rationalist
+                spirit, and we will explore them in this essay. However,
+                Carroll, in his other life, was the Oxford
+                mathematician and logician Charles Dodgson, and besides making
+                important technical contributions to those fields, he also gave
+                serious thought to their philosophical foundations.
+            </p>
 
-        <p>
-        This chapter will reconstruct the main lines of Pascal’s critique and
-        correction of Descartes’ conception of reason.  As understood by
-        Pascal, Descartes conceived of reason as being independent of all other
-        belief-forming faculties, including the senses, custom, tradition, and
-        divine revelation.  This has been called autonomous reason.  Pascal
-        argues that such a conception of reason is self-defeating and thus
-        impossible to consistently implement.  He is careful to insist,
-        however, that his criticism of autonomous reason is not irrational, but
-        in fact conforms to a more holistic account of what it means to be
-        rational.  Pascal’s epistemology is bound up with his view that human
-        nature is characterized by a fundamental duality of greatness and
-        wretchedness, such that neither complete ignorance or absolute
-        knowledge is our lot.  This middle position rejects fideism as well as
-        autonomous reason.  The final section will draw out the political
-        import of his epistemological vision.  Cartesian rationalism lays the
-        groundwork for political rationalism, so it is not surprising to see in
-        the few fragments Pascal devoted to political themes a criticism of
-        overly-rationalist conceptions of law, justice, and political order.
-        In them he begins to sketch a politics that eschews the rationalist
-        drive for certainty and universality.  The enlightenment goal of first
-        principles of justice is not only impossible, Pascal argues, but will
-        leave political societies vulnerable to revolution and disorder once
-        rationalist aspirations have undermined traditional modes of political
-        authority
-        </p>
+            <p>
+                Those reflections are expressed most succinctly in his essay
+                "What the Tortoise Said to Achilles," which was published in
+                the philosophical journal <i>Mind</i>. At a time when formalism
+                was on the rise in both mathematics and logic, Carroll wrote
+                his essay to demonstrate that such formalism could never 
+                capture the essential truth of logic itself: there are an
+                infinite number of possible formal systems of logic, and there
+                is no formalism that can help us to decide between them without
+                an infinite regress. In choosing one formal system as
+                preferable to another, we must of necessity rely upon our own
+                sense of truth (and here we see an anticipation of Michael
+                Polanyi's <i>Personal Knowledge</i>), and not another formalism.
+                As the Wittgensteinian philosopher Peter Winch wrote in
+                <i>The Idea of a Social
+                Science and its Relation to Philosophy</i> (1958),
+                Carroll showed that "the actual process of drawing an
+                inference, which is after all at the heart of logic, is
+                something which cannot be represented as a logical formula ...
+                Learning to infer is not just a matter of being taught about
+                explicit logical relations between propositions; it is
+                learning to do something" (p. 57).
+            </p>
 
-        <p>
-        This chapter will contribute to the scholarly understanding of Pascal
-        in two distinct ways. First, while my depiction of Pascal’s
-        epistemology will be roughly in line with existing accounts, there are
-        two recent books that attempt to modify how we think about Pascal as a
-        philosopher. My chapter will weigh their respective arguments and
-        modifications in order to determine the manner in which they can be
-        incorporated into Pascal’s broader epistemology. Second, this chapter
-        will develop Pascal’s political theory to a greater extent than has so
-        far been done. Most philosophical attention to Pascal has focused on
-        his epistemology or theology; I will attempt to formalize his political
-        teaching and, in particular, clarify the way in which it follows from
-        his epistemology and anthropology.
-        </p>
+            <p>
+                When we fully understand Carroll's point in the tortoise and
+                Achilles essay, we see that he was a forerunner of both
+                G&ouml;del and Wittgenstein in pointing out how any formal
+                system must be anchored in some deeper notion of its
+                significance for it to have any relevance to truth.
+            </p>
+
 
     </body>
 </html>
