--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -131,9 +131,12 @@
             </li>
 
             <li>
-                Jonathan Swift
+                <a href="swift.html">
+                Disciplining Travel for Scientific Purposes:
+                Swift's Critique of the New Science</a>
                 <br />
-                Dónal Gill,
+                <a href="bios.html#gill">
+                Dónal Gill</a>,
                 Concordia University
             </li>
 
@@ -161,7 +164,12 @@
             </li>
 
             <li>
-                Lewis Carroll
+                <a href="carroll.html">
+                    Lewis Carroll</a>
+                <br>
+                <a href="bios.html#callahan">
+                Gene Callahan</a>,
+                New York University
             </li>
 
             <li>
