--- a/AntiRats2/swift.html
+++ b/AntiRats2/swift.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-        Pascal on Faith, Reason, and Politics
+        Disciplining Travel for Scientific Purposes:
+        Swift's Critique of the New Science
         </title>
     </head>
 
@@ -68,53 +69,39 @@
         </div>
 
         <h1>
-        Pascal on Faith, Reason, and Politics
+        Disciplining Travel for Scientific Purposes:
+        Swift's Critique of the New Science
         </h1>
 
         <p>
-        Tyler Chamberlain
+        Dónal Gill
         </p>
 
         <p>
-        This chapter will reconstruct the main lines of Pascal’s critique and
-        correction of Descartes’ conception of reason.  As understood by
-        Pascal, Descartes conceived of reason as being independent of all other
-        belief-forming faculties, including the senses, custom, tradition, and
-        divine revelation.  This has been called autonomous reason.  Pascal
-        argues that such a conception of reason is self-defeating and thus
-        impossible to consistently implement.  He is careful to insist,
-        however, that his criticism of autonomous reason is not irrational, but
-        in fact conforms to a more holistic account of what it means to be
-        rational.  Pascal’s epistemology is bound up with his view that human
-        nature is characterized by a fundamental duality of greatness and
-        wretchedness, such that neither complete ignorance or absolute
-        knowledge is our lot.  This middle position rejects fideism as well as
-        autonomous reason.  The final section will draw out the political
-        import of his epistemological vision.  Cartesian rationalism lays the
-        groundwork for political rationalism, so it is not surprising to see in
-        the few fragments Pascal devoted to political themes a criticism of
-        overly-rationalist conceptions of law, justice, and political order.
-        In them he begins to sketch a politics that eschews the rationalist
-        drive for certainty and universality.  The enlightenment goal of first
-        principles of justice is not only impossible, Pascal argues, but will
-        leave political societies vulnerable to revolution and disorder once
-        rationalist aspirations have undermined traditional modes of political
-        authority
-        </p>
-
-        <p>
-        This chapter will contribute to the scholarly understanding of Pascal
-        in two distinct ways. First, while my depiction of Pascal’s
-        epistemology will be roughly in line with existing accounts, there are
-        two recent books that attempt to modify how we think about Pascal as a
-        philosopher. My chapter will weigh their respective arguments and
-        modifications in order to determine the manner in which they can be
-        incorporated into Pascal’s broader epistemology. Second, this chapter
-        will develop Pascal’s political theory to a greater extent than has so
-        far been done. Most philosophical attention to Pascal has focused on
-        his epistemology or theology; I will attempt to formalize his political
-        teaching and, in particular, clarify the way in which it follows from
-        his epistemology and anthropology.
+        The Voyage to Laputa in Book III of <i>Gulliver's Travels</i> contains a
+        pivotal facet of Swift’s attack on the emergent modernist project as he
+        saw it: the New Science characterized by the experimental philosophy of
+        the Royal Society of London and the University of Leiden. The aim of
+        this chapter is to connect the underlining goals and ambitions of the
+        New Science to other relevant tracts in the emergent Enlightenment
+        order of nascent liberal individualism featured in Swift’s
+        Counter-Enlightenment critique of travel. As the ideas of Rationalism
+        crystallised in the early eighteenth century, the assumptions of
+        liberalism concerning travel coalesced around a vital spoke of the
+        emergent Enlightenment, that of the experimental science.
+        <i>Gulliver's Travels</i>
+        offers a stern warning as to the risks that accompany free-form
+        travel that assumes beneficial experiential edification in all
+        circumstances. Science offers a form of order or discipline upon
+        travel, but travel moulded to the demands of empirical observation for
+        the purposes of scientific discovery is equally undesirable. This is
+        because, as Swift shows in the Voyage to Laputa, the scientific
+        worldview possesses the capacity to be inhuman in its singular
+        obsession with speculation and abstraction, hubristically viewing all
+        its exploits under the banner of the triumphant march of so-called
+        progress. Swift demonstrates that science carries an absolutist
+        tendency that can easily bleed into politics, hastily rationalising a
+        drastic overhaul of society in accordance with its aims.
         </p>
 
     </body>
