Added full Graham title.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -282,7 +282,9 @@
 
             <li>
                 <a href="graham.html">
-                A.C. Graham
+                A.C. Graham:
+                Aware Spontaneity (anti-rationalism)
+                vs Rationalism and Irrationalism
                 </a> 
                 <br>
                     <a href="bios.html#coats">
