Added full Carroll title.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -165,7 +165,8 @@
 
             <li>
                 <a href="carroll.html">
-                    Lewis Carroll</a>
+                    Lewis Carroll:
+                What the Tortoise Said to Achilles</a>
                 <br>
                 <a href="bios.html#callahan">
                 Gene Callahan</a>,
