Added Nisbet abstract.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -209,12 +209,6 @@
             </li>
 
             <li>
-                G.K. Chesterton
-                <br>
-                Eric Kos
-            </li>
-
-            <li>
                 <a href="babbitt.html">
                     “Dreaming of Systems So Perfect That No
                     One Will Need to Be Good”: Irving Babbitt
@@ -244,12 +238,24 @@
             </li>
 
             <li>
-                Robert Nisbet
+                <a href="lowith.html">
+                Nec Spe Nec Metu:
+                Philosophic Catharsis in Karl Löwith’s Meaning in History</a>
+                <br />
+                <a href="bios.html#mckinnell">
+                    Ryan Alexander McKinnell
+                </a>,
+                St. Francis Xavier University
+            </li>
+
+            <li>
+                <a href="nisbet.html">
+                Social Science as Art:
+                Robert Nisbet’s Defense of Traditional Sociology</a>
                 <br />
                     <a href="bios.html#sheahan">
                         Luke Sheahan,
                     </a>
-                    Assistant Professor, Department of Political Science
                     Duquesne University
 
             </li>
@@ -339,15 +345,8 @@
                 <br />
                     <a href="bios.html#horcher">
                         Ferenc Hörcher</a>,
-                        Research professor and director,
                         Research Institute of Politics and Government,
-                        National University of Public Service; Senior
-                        fellow of the Institute of Philosophy in Budapest
-            </li>
-
-            <li>
-                Nassim Nicholas Taleb:
-                The Lindy Effect
+                        National University of Public Service
             </li>
 
         </ul>
