--- a/AntiRats2/lowith.html
+++ b/AntiRats2/lowith.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Volume 3
+            Nec Spe Nec Metu:
+            Philosophic Catharsis in Karl Löwith’s Meaning in History
         </title>
     </head>
 
@@ -68,18 +69,40 @@
         </div>
 
         <h1>
-            Volume 3
+            Nec Spe Nec Metu:
+            Philosophic Catharsis in Karl Löwith’s Meaning in History
         </h1>
 
         <p>
-            Paul Feyerabend
-        </p>
-
-        <p>
-            <li>
-                Nassim Nicholas Taleb:
-                The Lindy Effect
-            </li>
+        The philosopher Karl Löwith’s confrontation with modernity has not
+        received the same level of attention as those of fellow twentieth
+        century German-Jewish émigrés, Hannah Arendt and Leo Strauss. This is
+        regrettable, for while at times appearing only as chronicler of
+        European nihilism, Löwith’s philosophic-political reflections are just
+        as ambitious as those of his contemporaries. As Jürgen Habermas argues,
+        Löwith intends to generate "the powerful mechanisms with which he hopes
+        to set in motion a portentous change of scene from modernity to
+        antiquity." For Löwith though, this change cannot be brought about a
+        radical jump to classical paganism a la Nietzsche, but via a
+        considered, analytical reduction of modernity to its component parts.
+        Löwith’s measured subversion of the presumptions of modern philosophy
+        is best displayed in his most influential work, <i>Meaning in History</i>, in
+        which he argues that Enlightenment philosophies of history originate
+        with the Hebrew and Christian faith in an eschatological fulfilment.
+        While the moderns abandon the faith in providence, they secularize it
+        into a faith in progress, attempting to find redemption for human
+        beings in the historical process. An attempt that becomes ever more
+        desperate and hubristic, which in turn is reflected in a growing
+        franticness in modern politics as modern reason and faith in progress
+        becomes further estranged from its roots. In demonstrating that modern
+        philosophies of history are dependent on the theological concept of
+        history as a history of fulfillment and salvation, Löwith reveals the
+        impossibility of finding meaning in history on rational grounds. Thus,
+        despite the pretensions of thinkers from Voltaire to Marx, they too
+        reside within a horizon delimited by irrational hope and faith. By
+        purging readers of the illusions of modern philosophy, Löwith’s
+        catharsis makes accessible the serene rediscovery of the sober reason
+        of the ancients.
         </p>
 
     </body>
