--- a/AntiRats2/nisbet.html
+++ b/AntiRats2/nisbet.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Volume 3
+            Social Science as Art:
+            Robert Nisbet’s Defense of Traditional Sociology
         </title>
     </head>
 
@@ -68,18 +69,31 @@
         </div>
 
         <h1>
-            Volume 3
+            Social Science as Art:
+            Robert Nisbet’s Defense of Traditional Sociology
         </h1>
 
         <p>
-            Paul Feyerabend
-        </p>
-
-        <p>
-            <li>
-                Nassim Nicholas Taleb:
-                The Lindy Effect
-            </li>
+        The American sociologist Robert Nisbet was most famous for his critique
+        of the alliance between modern statism and individualism and his
+        defense of communities. But as a prominent sociologist, he also wrote
+        about sociology and the social sciences more broadly as humanistic
+        disciplines. Nisbet was deeply critical of the quantitative and
+        rationalistic turn in sociology writing that the creative processes of
+        groundbreaking social scientific work is more akin to that of an artist
+        than that of the physical scientist or mathematician. In his social
+        science textbooks such as <i>The Sociological Tradition</i>
+        and <i>The Social Bond</i> Nisbet discusses
+        the methodological aspect of sociology that
+        grounds it in the humanities and arts rather than in the sciences even
+        going so far as to title one book
+        <i>Sociology as an Art Form</i> where he
+        argues that the founding of sociology owes a lot more to the nineteenth
+        century romanticism than it does to the Enlightenment and that it takes
+        its scholarly forms more from art than it does from the physical
+        sciences. This chapter discusses this oft-ignored aspect of Nisbet's
+        work and connects his critique to that of Michael Oakshott and Michael
+        Polonyi.
         </p>
 
     </body>
