Added Seven on Williams.

--- a/AntiRats2/bios.html
+++ b/AntiRats2/bios.html
@@ -329,6 +329,24 @@
             <hr width="50%">
 
             <li>
+                <a name="seven">
+                <span class="contrib">G&uuml;lsen Seven</span>
+                is an Assistant Professor of Political Science and
+                International Relations at TED University, where she teaches
+                history of political thought and contemporary political theory.
+                She holds a PhD in Political Science and Public Administration
+                from Bilkent University. Her research interests include realism
+                and moralism in political theory, the concept of political
+                judgement and the relationship between political theory and
+                political practice.
+                </a>
+                <br>
+                <img src="graphics/Seven.jpg" width="14%" class="center-img">
+            </li>
+
+            <hr width="50%">
+
+            <li>
                 <a name="sheahan">
                 <span class="contrib">Luke Sheahan</span>
                 Luke C. Sheahan is Assistant Professor of Political Science at
