--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -271,9 +271,12 @@
             </li>
 
             <li>
-                Bernard Williams
+                <a href="williams.html">
+                Bernard Williams's Critique Of Rationalism In Ethics
+                </a>
                 <br />
-                    Gulsen Seven,
+                <a href="bios.html#seven">
+                    G&uuml;lsen Seven</a>,
                     TED University
             </li>
 
