Added Eliot abstract.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -149,7 +149,10 @@
             </li>
 
             <li>
-                George Eliot
+                <a href="eliot.html">
+                "The Gods of the Hearth Exist for Us Still":
+                George Eliot's Critiques of Rationalism
+                </a>
                 <br />
                 <a href="bios.html#wyllie">
                     Rob Wyllie</a>,
@@ -330,7 +333,7 @@
             <li>
                 John Gray
                 <br />
-                Nathan Cockerham
+                Nathan Cockram
             </li>
 
             <li>
