Added Tolkien abstract.

--- a/AntiRats2/tolkien.html
+++ b/AntiRats2/tolkien.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Social Science as Art:
-            Robert Nisbet’s Defense of Traditional Sociology
+            J.R.R. Tolkien: Tales Against Domination
         </title>
     </head>
 
@@ -69,31 +68,45 @@
         </div>
 
         <h1>
-            Social Science as Art:
-            Robert Nisbet’s Defense of Traditional Sociology
+            J.R.R. Tolkien: Tales Against Domination
         </h1>
 
         <p>
-        The American sociologist Robert Nisbet was most famous for his critique
-        of the alliance between modern statism and individualism and his
-        defense of communities. But as a prominent sociologist, he also wrote
-        about sociology and the social sciences more broadly as humanistic
-        disciplines. Nisbet was deeply critical of the quantitative and
-        rationalistic turn in sociology writing that the creative processes of
-        groundbreaking social scientific work is more akin to that of an artist
-        than that of the physical scientist or mathematician. In his social
-        science textbooks such as <i>The Sociological Tradition</i>
-        and <i>The Social Bond</i> Nisbet discusses
-        the methodological aspect of sociology that
-        grounds it in the humanities and arts rather than in the sciences even
-        going so far as to title one book
-        <i>Sociology as an Art Form</i> where he
-        argues that the founding of sociology owes a lot more to the nineteenth
-        century romanticism than it does to the Enlightenment and that it takes
-        its scholarly forms more from art than it does from the physical
-        sciences. This chapter discusses this oft-ignored aspect of Nisbet's
-        work and connects his critique to that of Michael Oakeshott and Michael
-        Polanyi.
+        J.R.R. Tolkien's epic <i>Lord of the Rings</i> trilogy,
+        along with the lighter <i>Hobbit</i> prequel,
+        are among the most beloved books of the last century.
+        They have sold hundreds of millions of copies and defined the fantasy
+        genre for decades, with a literary quality far superior to their many
+        imitators. The <i>Lord of the Rings</i> has become a cultural icon with broad
+        appeal, whose fans range from hippies to conservative Catholics, but
+        this does not arise from the books being mere escapism. Tolkien's work
+        provided a compelling, if subtle, counternarrative to the claims of
+        scientism and rationalism that dominated much of the 20th century.
+        </p>
+
+        <p>
+        This goes deeper that Tolkien's fondness for forests and distaste for
+        mechanization. The great evils in his stories are defined by their
+        desire to dominate and control, subjugating the weak to their ends.
+        Thus, the chief moral struggle in his work is not the physical war
+        against the unabashed evil of the Dark Lord and his monsters. Rather it
+        is in the hearts of those who are tempted to join with that evil, or to
+        adopt its methods and mindset of domination. Tolkien's work is not a
+        warning against power as such, but against domination. And rationalism
+        (as distinct from reason) is a means and excuse for this unjust
+        dominion. It is an attempt by the intellect to grasp the whole of
+        reality, and thereby bring it under control. Temptation to this may
+        begin from a desire to do good, but this is perverted by the arrogant
+        assumption of control.
+        </p>
+
+        <p>
+        Tolkien did not lay this out with heavy-handed allegory or didacticism;
+        he wanted to tell stories, not put crude speeches into the mouths of
+        his characters. But his moral and philosophical outlook did inform his
+        work, which in turn has shaped the imaginative vision of many readers.
+        In the world of literature, Tolkien's tales have been a citadel
+        standing against rationalist domination.
         </p>
 
     </body>
