Added Barfield abstract.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -196,7 +196,9 @@
             </li>
 
             <li>
-                Owen Barfield
+                <a href="barfield.html">
+                Metaphor, Meaning, and Mind:
+                Knowledge and Imagination in Owen Barfield</a>
                 <br />
                     <a href="bios.html#wilford">
                         Sarah Wilford</a>,
