Added Schmitt abstract.

--- a/AntiRats2/bios.html
+++ b/AntiRats2/bios.html
@@ -309,6 +309,24 @@
             <hr width="50%">
 
             <li>
+                <a name="ozman">
+                <span class="contrib">
+                Aylin Özman
+                </span>
+                is a Professor of Political Science and
+                International Relations at TED University in Ankara. Her areas
+                of research include political theory, history of political and
+                social thought, Turkish politics and gender. She is the author
+                of various articles in <i>Journal of Language and Politics</i>,
+                <i>Social and Legal Studies</i>,
+                <i>Journal of Third World Studies</i>,
+                <i>Turkish Studies</i>, and <i>Contemporary Politics</i>.
+                </a>
+            </li>
+
+            <hr width="50%">
+
+            <li>
                 <a name="pourvand">
                 <span class="contrib">Kaveh Pourvand</span>
                 is a political theorist. He received his PhD in Political
