--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -228,9 +228,17 @@
             </li>
 
             <li>
-                Carl Schmitt
+                <a href="schmitt.html">
+                Carl Schmitt's Exceptional Critique of Rationalism
+                </a>
                 <br />
-                    Gulsen Seven and Aylin Ozman
+                <a href="bios.html#seven">
+                    Gulsen Seven
+                </a>
+                    and
+                <a href="bios.html#ozman">
+                    Aylin Özman
+                </a>
             </li>
 
             <li>
