Added author names to Schmitt.

--- a/AntiRats2/schmitt.html
+++ b/AntiRats2/schmitt.html
@@ -72,6 +72,10 @@
         </h1>
 
         <p>
+            Gulsen Seven and Aylin Özman
+        </p>
+
+        <p>
         Carl Schmitt (1888-1985) is one of the major political theorists of the
         twentieth century. For him, 'rationalism' was not a keyword. But he was
         certainly critical of the enlightenment tradition of political
