Added Scott abstract.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -348,8 +348,9 @@
             </li>
 
             <li>
-                James C. Scott:
-                Seeing Like a Rationalist
+                <a href="scott.html">
+                James C. Scott
+                </a>
                 <br />
                     <a href="bios.html#pourvand">
                         Kaveh Pourvand</a>
