Added James C. Scott title.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -140,13 +140,6 @@
                 Concordia University
             </li>
 
-            <li>
-                Joseph de Maistre
-            </li>
-
-            <li>
-                Samuel Coleridge
-            </li>
 
             <li>
                 <a href="eliot.html">
@@ -351,7 +344,8 @@
 
             <li>
                 <a href="scott.html">
-                James C. Scott
+                    James C. Scott:
+                    Seeing like a State and the Limits of Enlightenment Rationality
                 </a>
                 <br />
                     <a href="bios.html#pourvand">
