--- a/AntiRats2/vol3.html
+++ b/AntiRats2/vol3.html
@@ -71,16 +71,24 @@
             Volume 3
         </h1>
 
-        <p>
-            Paul Feyerabend
-        </p>
+        <ul>
+            <li>
+                Joseph de Maistre
+            </li>
 
-        <p>
+            <li>
+                Samuel Coleridge
+            </li>
+
+        <li>
+            Paul Feyerabend
+        </li>
+
             <li>
                 Nassim Nicholas Taleb:
                 The Lindy Effect
             </li>
-        </p>
+        </ul>
 
     </body>
 </html>
