--- a/AntiRats2/scott.html
+++ b/AntiRats2/scott.html
@@ -68,8 +68,13 @@
         </div>
 
         <h1>
-            James C. Scott
+            James C. Scott:
+            Seeing like a State and the Limits of Enlightenment Rationality
         </h1>
+
+        <p>
+        Kaveh Pourvand
+        </p>
 
         <p>
         James Scott is a political scientist and anthropologist, most famous
