Added Cokram bio.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -218,7 +218,6 @@
                 <a href="bios.html#garrison">
                     Justin Garrison,
                 </a>
-                Associate Professor of Political Science
                 Roanoke College
             </li>
 
@@ -252,8 +251,7 @@
                 Philosophic Catharsis in Karl Löwith’s Meaning in History</a>
                 <br />
                 <a href="bios.html#mckinnell">
-                    Ryan Alexander McKinnell
-                </a>,
+                    Ryan Alexander McKinnell</a>,
                 St. Francis Xavier University
             </li>
 
@@ -327,8 +325,7 @@
                 </a>
                 <br>
                     <a href="bios.html#mcintyre">
-                    Kenneth McIntyre,
-                    </a>
+                        Kenneth McIntyre</a>,
                     Sam Houston State University
             </li>
 
@@ -339,7 +336,8 @@
             <li>
                 John Gray
                 <br />
-                Nathan Cockram
+                    <a href="bios.html#cockram">
+                        Nathan Cockram</a>
             </li>
 
             <li>
