Added Gray abstract.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -334,7 +334,9 @@
             </li>
 
             <li>
-                John Gray
+                <a href="gray.html">
+                John Gray's Agon: Liberalism, Morality, Politics
+                </a>
                 <br />
                     <a href="bios.html#cockram">
                         Nathan Cockram</a>
