--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -115,7 +115,7 @@
 
             <li>
                 <a href="vico.html">
-                    Giambattista Vico and the Roots of Political Division</a>
+                    Giambattista Vico and the Imaginative Sources of Political Division</a>
                 <br />
                     <a href="bios.html#finley">
                     Emily Finley</a>,
