--- a/AntiRats2/vico.html
+++ b/AntiRats2/vico.html
@@ -68,7 +68,7 @@
         </div>
 
         <h1>
-            Giambattista Vico and the Roots of Political Division
+            Giambattista Vico and the Imaginative Sources of Political Division
         </h1>
 
         <p>
@@ -76,36 +76,33 @@
         </p>
 
         <p>
-        Political division in America appears to be reaching a crescendo, and
-        everything from medical opinions to climate change to each Tweet issued
-        by the president is subjected to a partisan litmus test by the media,
-        politicians, and also ordinary citizens. Increasing politicization is
-        leading to a radical fracturing of American society along ideological
-        lines, with each side finding support for its position in historical,
-        sociological, and even scientific claims antithetical to those of the
-        opposing side. No longer are individual studies and historical episodes
-        debated for veracity, but the entirety of Western history and
-        civilization is being debated
+        The intensifying political polarization in America and the West has led
+        to a radical splintering of the social fabric. It has become
+        increasingly clear that a reassessment of the Enlightenment concept of
+        reason, that for so long has dominated our belief about what ultimately
+        motivates people, may be in order.
         </p>
 
         <p>
-        In order to understand this division, it is necessary to reexamine the
-        fundamental Enlightenment concept of reason that for so long has
-        decisively affected the ways in which we conceptualize politics and try
-        to effect social change. One of the first thinkers to oppose Cartesian
-        rationalism, the lifeblood of Enlightenment thinking, and to offer a
-        thoroughgoing philosophical counterargument was Giambattista Vico
-        (1668-1744). From the perspective of Italian civic humanism, Vico
-        argues that the imagination, rather than reason, is responsible not
-        only for the development of culture and civilization but also our
-        ability to know with certainty—following the project of Descartes—the
-        nature of human existence. The considerable epistemological and
-        philosophical insights of this eighteenth-century Neapolitan thinker
-        can help us to understand the origins in the imagination of the current
-        political divide and also help us to reach our political adversaries
-        through proper use of the imagination in the form of eloquence and find
-        common ground.
+            To understand the abiding political divisions in the West,
+            highlighted in the diametrically opposed contemporary political
+            movements of populist nationalism and democratic socialism, it is
+            necessary to reevaluate the rationalist epistemology and to
+            consider another epistemological framework for thinking about the
+            limits and possibilities of politics. One of the first thinkers to
+            oppose Cartesian rationalism, the lifeblood of Enlightenment
+            thinking, and to offer a thoroughgoing philosophical
+            counterargument was Giambattista Vico (1668-1744). From the
+            perspective of Italian civic humanism, Vico argues that the
+            imagination, rather than reason, is responsible not only for the
+            development of culture and civilization but also our ability to
+            know with certainty—following the project of Descartes—the nature
+            of human existence. The considerable epistemological and
+            philosophical insights of this eighteenth-century Neapolitan
+            thinker can help us to understand the origins in the imagination of
+            meaningful political division and also point toward the possibility
+            of a more robust democratic pluralism through effective use of the
+            imagination in the form of eloquence and wit. 
         </p>
-
     </body>
 </html>
